fix(markdown): codemirror toolbar dark mode

--- a/packages/marktion/theme/marktion-themes.css
+++ b/packages/marktion/theme/marktion-themes.css
@@ -30,7 +30,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.marktion-themes.marktion-themes-border {
+.marktion-themes.marktion-themes-bordered {
   box-shadow: var(--shadow-3);
 }
 
